<resources>
    <string name="app_name">Jv</string>
    <string name="TI_koltseg10_lb">90/10</string>
    <string name="TI_koltseg50_lb">50/50</string>
    <string name="TI_Ekho_lb">Ekho</string>
    <string name="ekho_alap">Ekho alap:</string>
    <string name="ekho_15">EKHO 15%:</string>
    <string name="ekho_11">EKHO 11%:</string>
    <string name="levon_sok_sszesen">Levonások összesen:</string>
    <string name="kifizetend_sszesen">Kifizetendő összesen:</string>
    <string name="tv_sum_bev_nb">0</string>
    <string name="meccs_ek">Meccs/ek:</string>
    <string name="nulla">0</string>
    <string name="egy">1</string>
    <string name="Szum">Összesen:</string>
    <string name="MkoszNormaSzam">59</string>
    <string name="tik_lts_g">Útiköltség:</string>
    <string name="meccs_szam">Mérkőzések száma</string>
    <string name="egy_meccs_dija">Egy mérkőzés díja</string>
    <string name="mkosz_norma">MKOSZ norma</string>
    <string name="utikoltseg_oda_vissza">Útikötség oda-vissza</string>
    <string name="btn_settings">Beállítások</string>
    <string name="btn_kiszamol">Számold ki</string>
    <string name="jvdij">Játékvezetődíj (bevétel):</string>
    <string name="tiz">10</string>
    <string name="jarulekalap">Járulékalap:</string>
    <string name="koltseg">Költség:</string>
    <string name="NyB10">Nyugdíj biztosítási járulék (10%):</string>
    <string name="EBJ4">Egészség biztosítási járulék (4%):</string>
    <string name="EBJ3">Egészség biztosítási járulék (3%):</string>
    <string name="SzJA15">Személyi jövedelemadó előleg (15%):</string>
    <string name="levonasok">Levonások:</string>
    <string name="kifizetendo">Kifizetendő:</string>
</resources>
